--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header-content">
         <img src="https://st2.depositphotos.com/1116329/11882/v/950/depositphotos_118824632-stock-illustration-samara-russia-august-4-2016.jpg"
              alt="Logo" class="logo">
-        <h1>PokeSTORE</h1>
+        <h1>PokéSTORE</h1>
     </div>
     <nav>
         <ul>
@@ -41,16 +41,18 @@
 
 <!-- Main -->
 <main>
-    <h1>Welcome to Poke<span style="color:#ff0000;">STORE</span></h1>
+    <h1 style="font-family: FreeMono, monospace;"> Welcome to Poké<span
+            style="color:#ff0000;font-family: FreeMono, monospace;">STORE</span></h1>
 
-    <p class="centered-text"> Are you ready for new adventure. Check out our latest video!</p>
-    <div style="margin: 50px auto; width: 1120px;">
-        <iframe width="1120" height="630" src="https://www.youtube.com/embed/GmE3uICi9oo" frameborder="0"
+    <p style="padding-top: 20px" class="centered-text"> Are you ready for new adventure?</p>
+    <p class="centered-text"> Check out our latest video!</p>
+    <div style="margin: 30px auto; width: 840px;">
+        <iframe width="840" height="472.5" src="https://www.youtube.com/embed/GmE3uICi9oo" frameborder="0"
                 allowfullscreen></iframe>
     </div>
 
-    <h2>Pokémon Card Catalog</h2>
-    <p>Choose your POKEMON and become Pokemon MASTER!</p>
+    <h2 style="font-size: 40px; padding-top: 60px;" class="centered-text"> Pokémon Card Catalog</h2>
+    <p style="padding-bottom: 5px; font-size: 24px; " class="centered-text"> Choose your POKÈMON and become the Greatest Pokémon MASTER!</p>
     <table>
         <tr>
             <th>Image</th>
@@ -179,7 +181,11 @@
         </tr>
     </table>
 
-    <h2>Your Cart</h2>
+    <h2 style="display: flex; align-items: center;">
+        <span>Your Cart</span>
+        <img src="https://media.istockphoto.com/id/1325904846/pl/wektor/symbol-ikony-koszyka-przycisk-sklepu-internetowego-znak-logo-sklepu-internetowego-obraz.jpg?s=170667a&w=0&k=20&c=tze6SP2vPeif878N5OZYvXYoCx28Cpj09MwMBoYEjy8="
+             alt="Cart Icon" style="width: auto; height: 40px; margin-left: 2px;">
+    </h2>
     <p>Total: $</p>
 </main>
 
