--- a/index2.html
+++ b/index2.html
@@ -40,7 +40,7 @@
 
 <!-- Main -->
 <main>
-    <h2 class="page-title">Login to Your Account</h2>
+    <h2 style="font-family: FreeMono, monospace;" class="page-title">Login to Your Account</h2>
 
     <form method="post" class="form-style">
         <div class="form-group">
@@ -53,22 +53,23 @@
             <input type="password" id="password" name="password"><br><br>
         </div>
 
-        <button type="submit" class="button-82-pushable">
-            <span class="button-82-shadow"></span>
-            <span class="button-82-edge"></span>
-            <span class="button-82-front">Login</span>
+        <button type="submit" class="button-red-pushable">
+            <span class="button-red-shadow"></span>
+            <span class="button-red-edge"></span>
+            <span class="button-red-front">Login</span>
         </button>
     </form>
     <br>
 
     <a href="index.html">
-        <button type="button" class="button-82-pushable">
-            <span class="button-82-shadow"></span>
-            <span class="button-82-edge"></span>
-            <span class="button-82-front">Back to Main Page</span>
+        <button type="button" class="button-red-pushable">
+            <span class="button-red-shadow"></span>
+            <span class="button-red-edge"></span>
+            <span class="button-red-front">Back to Main Page</span>
         </button>
     </a>
 </main>
+
 
 <!-- Stopka -->
 <footer>
