--- a/index3.html
+++ b/index3.html
@@ -40,7 +40,7 @@
 
 <!-- Main -->
 <main>
-    <h1 class="page-title">Pokemon Market</h1>
+    <h1 style="font-family: FreeMono, monospace;" class="page-title">Pokemon Market</h1>
 
     <form method="post" class="form-style">
         <div class="form-group">
@@ -72,19 +72,19 @@
             <input type="text" name="price" id="price" placeholder="Enter the price"><br><br>
         </div>
 
-        <button type="submit" class="button-82-pushable">
-            <span class="button-82-shadow"></span>
-            <span class="button-82-edge"></span>
-            <span class="button-82-front">Confirm</span>
+        <button type="submit" class="button-red-pushable">
+            <span class="button-red-shadow"></span>
+            <span class="button-red-edge"></span>
+            <span class="button-red-front">Confirm</span>
         </button>
     </form>
     <br>
 
     <a href="index.html">
-        <button type="button" class="button-82-pushable">
-            <span class="button-82-shadow"></span>
-            <span class="button-82-edge"></span>
-            <span class="button-82-front">Back to Main Page</span>
+        <button type="button" class="button-red-pushable">
+            <span class="button-red-shadow"></span>
+            <span class="button-red-edge"></span>
+            <span class="button-red-front">Back to Main Page</span>
         </button>
     </a>
 </main>
