--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
     <p style="padding-top: 20px" class="centered-text"> Are you ready for new adventure?</p>
     <p class="centered-text"> Check out our latest video!</p>
     <div style="margin: 30px auto; width: 840px;">
-        <iframe width="840" height="472.5" src="https://www.youtube.com/embed/GmE3uICi9oo" frameborder="0"
-                allowfullscreen></iframe>
+        <iframe width="840" height="472.5" src="https://www.youtube.com/embed/GmE3uICi9oo?rel=0&modestbranding=1"
+                frameborder="0" allowfullscreen></iframe>
     </div>
 
+
     <h2 style="font-size: 40px; padding-top: 60px;" class="centered-text"> Pokémon Card Catalog</h2>
-    <p style="padding-bottom: 5px; font-size: 24px; " class="centered-text"> Choose your POKÈMON and become the Greatest Pokémon MASTER!</p>
+    <p style="padding-bottom: 5px; font-size: 24px; " class="centered-text"> Choose your POKÈMON and become the Greatest
+        Pokémon MASTER!</p>
     <table>
         <tr>
             <th>Image</th>
@@ -186,6 +188,7 @@
         <img src="https://media.istockphoto.com/id/1325904846/pl/wektor/symbol-ikony-koszyka-przycisk-sklepu-internetowego-znak-logo-sklepu-internetowego-obraz.jpg?s=170667a&w=0&k=20&c=tze6SP2vPeif878N5OZYvXYoCx28Cpj09MwMBoYEjy8="
              alt="Cart Icon" style="width: auto; height: 40px; margin-left: 2px;">
     </h2>
+
     <p>Total: $</p>
 </main>
 
